# dimeta-query

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/dimeta_query/: __init__.py  _highlight.py  cli.py  formatter.py  grammar.lark  graph_manager.py  history.py  ir.py  llvm-highlights.scm  matchers.py  model.py  modifiers.py  parser.py  query.py  reducers.py  repl.py  tui.py  unparser.py
tests/: test_cli.py  test_environment_sanity.py  test_error_handling.py  test_formatter.py  test_graph_mutation.py  test_history.py  test_integration.py  test_ir_manager.py  test_linking.py  test_model.py  test_parser_validation.py  test_query_engine.py  test_reduction.py  test_repl_sandbox.py  test_sweep.py  test_token_processing.py  test_tui_smoke.py  test_unparser.py
